# T510-AI

./: .gitignore  Makefile  README.md  versions.mk
board/: common.mk
board/t510-ai/: README.md  apply-buildroot-patches.sh  apply-linux-patches.sh  board.mk
board/t510-ai/app_rfdc/: CMakeLists.txt  Makefile  README.md  app_gpio.c  app_gpio.h  main.c  remote_ctrl.c  remote_ctrl.h  rfdc_platform.h  sdr_ctrl.h
board/t510-ai/app_rfdc/lmk04828/: lmk04828.c
board/t510-ai/boot/: uEnv.txt
board/t510-ai/buildroot/: defconfig  post-build.sh
board/t510-ai/linux/: system-user.dtsi
board/t510-ai/patches/buildroot/: 0001-package-dropbear-link-with-libxcrypt.patch
board/t510-ai/patches/linux/: 0001-enable-ni-xge-management-enet.patch  0002-spi-nor-expose-qspi-flash-unique-id.patch  0003-ni-nixge-switch-to-phylink-and-enable-pause-control.patch  0004-enable-spidev-for-lmk04828-userspace.patch
board/t510-ai/u-boot/: fragment.config  zynqmp-t510-ai.dts
board/t510-fnic/: README.md  apply-buildroot-patches.sh  apply-linux-patches.sh  board.mk
board/t510-fnic/app_rfdc/: CMakeLists.txt  Makefile  README.md  app_mailbox.c  app_mailbox.h  main.c  remote_ctrl.c  remote_ctrl.h  remote_regs.h  rfdc_platform.c  sdr_ctrl.c
board/t510-fnic/app_rfdc/lmk04828/: lmk04828.h
board/t510-fnic/boot/: uEnv.txt
board/t510-fnic/buildroot/: defconfig  post-build.sh
board/t510-fnic/linux/: system-user.dtsi
board/t510-fnic/patches/linux/: 0001-enable-spidev-for-lmk04828-userspace.patch
board/t510-fnic/u-boot/: fragment.config  zynqmp-t510-fnic.dts
buildroot-external/: Config.in  external.desc  external.mk
buildroot-external/package/libmetal/: Config.in  libmetal.mk
buildroot-external/package/librfdc/: Config.in  librfdc.mk
buildroot-external/package/rootfs-fixups/: Config.in  rootfs-fixups.mk
buildroot-external/package/t510-fnic-rfdc/: Config.in  S47t510-fnic-rfdc  t510-fnic-rfdc.mk
hdl/t510_ai/: .gitignore  README.md
hdl/t510_ai/artifacts/t510_ai_100g_full_system/: psu_init.c  psu_init.h  psu_init.html  psu_init.tcl  psu_init_gpl.c  psu_init_gpl.h  t510_ai_100g_full_system_top.ltx  t510_ai_100g_full_system_top.xsa
hdl/t510_ai/lib/axi4s_sv/: AxiStreamIf.sv
hdl/t510_ai/scripts/: prepare_archive.sh  rebuild_build_ip_cache.sh  recreate_vivado_project.sh  refresh_exported_tcl.sh
hdl/t510_ai/scripts/vivado/: create_t510_ai_100g_full_system_project.tcl  create_t510_ai_100g_ps_bd_exported_from_current.tcl  export_current_t510_ai_bd_state.tcl  rebuild_t510_ai_build_ip_cache.tcl  t510_ai_100g_full_system_timing.xdc  t510_ai_build_ip_cache.tcl  t510_ai_pin.xdc
hdl/t510_fnic/: README.md
hdl/t510_fnic/artifacts/t510_fnic_aurora/: t510_fnic_aurora_bringup_top.xsa
hdl/t510_fnic/doc/: t510_fnic_ps_mailbox.md
hdl/t510_fnic/lib/ip/ila_0/: ila_0.xci
hdl/t510_fnic/scripts/: README.md  build_t510_fnic_aurora_bit.sh  build_t510_fnic_aurora_bit.tcl  export_current_project_scripts.sh  recreate_vivado_project.sh
hdl/t510_fnic/scripts/vivado/: create_t510_fnic_aurora_bd.tcl  create_t510_fnic_aurora_project.tcl  create_t510_fnic_aurora_sources.tcl  create_t510_fnic_aurora_sources.tcl.bak  export_current_project_scripts.tcl  t510_fnic_ps_preset.tcl
hdl/t510_fnic/sim/aurora_tx_mux_256/: run_xsim.sh  tb_t510_fnic_aurora_tx_mux_256.sv
hdl/t510_fnic/sim/axi_peek_poke_mailbox/: run_xsim.sh  tb_axi_peek_poke_mailbox.sv
hdl/t510_fnic/sim/rfdc_iq_packetizer_256/: run_xsim.sh  tb_t510_fnic_rfdc_iq_packetizer_256.sv
hdl/t510_fnic/sim/tx_flow_ctrl_256/: run_xsim.sh  tb_t510_fnic_tx_flow_ctrl_256.sv
hdl/t510_fnic/sim/tx_flow_mux_to_fnic_rx_256/: run_xsim.sh  tb_t510_fnic_tx_flow_mux_to_fnic_rx_256.sv
hdl/t510_fnic/sim/tx_iq_player_256/: run_xsim.sh  tb_t510_fnic_aurora_tx_iq_player_256.sv
hdl/t510_fnic/sim/tx_iq_player_flow_ctrl_256/: run_xsim.sh  tb_t510_fnic_tx_iq_player_flow_ctrl_256.sv
hdl/t510_fnic/xdc/: t510_fnic_qsfp0.xdc  t510_fnic_timing.xdc
host_app/T510_AI_DPDK/: CMakeLists.txt  IQ_TRANSPORT_LIFECYCLE.md  README.md  SOURCE_LAYOUT.md  imgui.ini
host_app/T510_AI_DPDK/gui/: README.md
host_app/T510_AI_DPDK/gui/src/: t510_ai_gui.cpp  t510_ai_gui_app.hpp  t510_ai_gui_support.cpp  t510_ai_gui_workers.cpp
host_app/T510_AI_DPDK/include/sdr/: config.hpp  log.hpp
host_app/T510_AI_DPDK/include/sdr/core/: dpdk_zero_copy.hpp  time_spec.hpp  zero_copy.hpp
host_app/T510_AI_DPDK/include/t510_ai/: chdr_epid.hpp  t510_ai_dpdk_device.hpp  t510_ai_fpga_ctrl.hpp  t510_ai_impl.hpp  t510_ai_iq_payload.hpp  t510_ai_regs.hpp  t510_ai_rfdc_ctrl.hpp
host_app/T510_AI_DPDK/matlab/: analyze_t510_ai_iq.m  analyze_t510_ai_iq_cs16.asv  analyze_t510_ai_iq_cs16.m
host_app/T510_AI_DPDK/src/core/: dpdk_zero_copy.cpp  time_spec.cpp  zero_copy.cpp
host_app/T510_AI_DPDK/src/device/: t510_ai_dpdk_device.cpp  t510_ai_fpga_ctrl.cpp  t510_ai_impl.cpp  t510_ai_iq_payload.cpp  t510_ai_rfdc_ctrl.cpp
host_app/T510_AI_DPDK/src/transport/: local_ctrl.cpp  local_ctrl.hpp
host_app/T510_AI_DPDK/tools/: build_asan_gui.sh  build_release.sh  run_gui_gdb.sh
scripts/: build_zynqmp_bsp.tcl  check_buildroot_output_relocation.sh  check_shared_source_board.sh  create_t530_29dr_ps_only.tcl  fetch_repo.sh  fix_vitis_toolchain_wrappers.sh  gen_dt.tcl  gen_image_its.sh  mkqspi_image.sh  new_board.sh  patch_legacy_dtc.sh  patch_libmetal_depends.py  render_ps_uart_config.py  reset_shared_sources.sh  sync_u_boot_dts.sh  t530_ps_ddr_diag.tcl  t530_ps_ddr_status.tcl  xilinx-settings.sh
(+79 files in other folders)
